# literature-ingestor

./: .gitignore  README.md  pyproject.toml
src/literature_ingestor/: cli.py  config.py
src/literature_ingestor/api/: app.py
src/literature_ingestor/ingest/: chunker.py  parser.py  pipeline.py
src/literature_ingestor/rag/: generator.py  retriever.py
src/literature_ingestor/store/: metadata_store.py  vector_store.py
